--- a/src/Atc.Azure.IoT.Wpf.App/UserControls/StatusBarView.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/UserControls/StatusBarView.xaml
@@ -2,6 +2,8 @@
     x:Class="Atc.Azure.IoT.Wpf.App.UserControls.StatusBarView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:atc="https://github.com/atc-net/atc-wpf/tree/main/schemas"
+    xmlns:atcValueConverters="https://github.com/atc-net/atc-wpf/tree/main/schemas/value-converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fluent="urn:fluent-ribbon"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,9 +14,19 @@
     ContextMenu="{x:Null}"
     mc:Ignorable="d">
 
-    <fluent:StatusBarItem Margin="10,0" HorizontalAlignment="Left">
-        <StackPanel Orientation="Horizontal">
-            <TextBlock>Hej</TextBlock>
-        </StackPanel>
+    <fluent:StatusBar.Resources>
+        <ResourceDictionary>
+            <atcValueConverters:StringNullOrEmptyToVisibilityCollapsedValueConverter x:Key="StringNullOrEmptyToVisibilityCollapsedValueConverter" />
+        </ResourceDictionary>
+    </fluent:StatusBar.Resources>
+
+    <fluent:StatusBarItem
+        Margin="10,0"
+        HorizontalAlignment="Right"
+        Visibility="{Binding Path=AuthenticatedUser, Converter={StaticResource StringNullOrEmptyToVisibilityCollapsedValueConverter}}">
+        <atc:UniformSpacingPanel Orientation="Horizontal" Spacing="5">
+            <TextBlock>Logged in as:</TextBlock>
+            <TextBlock Text="{Binding Path=AuthenticatedUser, FallbackValue=User}" />
+        </atc:UniformSpacingPanel>
     </fluent:StatusBarItem>
 </fluent:StatusBar>
