feat: add SelectorChanged to Tenant list in AzureTenantSelectionView

--- a/src/Atc.Azure.IoT.Wpf.App/Controls/AzureTenantSelectionView.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/Controls/AzureTenantSelectionView.xaml
@@ -32,6 +32,7 @@
                 LabelText="Tenants"
                 Orientation="Vertical"
                 SelectedKey="{Binding Path=SelectedTenantId}"
+                SelectorChanged="OnTenantSelectedChangedHandler"
                 Visibility="{Binding Path=IsAuthorizedToAzure, Converter={StaticResource BoolToVisibilityVisibleValueConverter}}" />
         </atc:UniformSpacingPanel>
     </atc:BusyOverlay>
