--- a/src/Atc.Azure.IoT.Wpf.App/UserControls/AzureTenantSelectionView.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/UserControls/AzureTenantSelectionView.xaml
@@ -1,13 +1,13 @@
 <UserControl
-    x:Class="Atc.Azure.IoT.Wpf.App.Controls.AzureTenantSelectionView"
+    x:Class="Atc.Azure.IoT.Wpf.App.UserControls.AzureTenantSelectionView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:atc="https://github.com/atc-net/atc-wpf/tree/main/schemas"
     xmlns:atcValueConverters="https://github.com/atc-net/atc-wpf/tree/main/schemas/value-converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Atc.Azure.IoT.Wpf.App.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DataContext="{d:DesignInstance Type=local:AzureTenantSelectionViewModel}"
+    xmlns:userControls="clr-namespace:Atc.Azure.IoT.Wpf.App.UserControls"
+    d:DataContext="{d:DesignInstance Type=userControls:AzureTenantSelectionViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
