--- a/src/Atc.Azure.IoT.Wpf.App/UserControls/AzureIoTHubServiceView.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/UserControls/AzureIoTHubServiceView.xaml
@@ -3,12 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Atc.Azure.IoT.Wpf.App.UserControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Grid>
-        <TextBlock>Hello IOTHUBBBBBBBBBY</TextBlock>
+        <TextBlock>Hello IOTHUB</TextBlock>
     </Grid>
 </UserControl>
