--- a/src/Atc.Azure.IoT.Wpf.App/UserControls/AzureIoTHubServiceView.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/UserControls/AzureIoTHubServiceView.xaml
@@ -2,12 +2,16 @@
     x:Class="Atc.Azure.IoT.Wpf.App.UserControls.AzureIoTHubServiceView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:atc="https://github.com/atc-net/atc-wpf/tree/main/schemas"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:userControls="clr-namespace:Atc.Azure.IoT.Wpf.App.UserControls"
+    d:DataContext="{d:DesignInstance Type=userControls:AzureIoTHubServiceViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid>
-        <TextBlock>Hello IOTHUB</TextBlock>
-    </Grid>
+    <atc:UniformSpacingPanel Orientation="Vertical" Spacing="10">
+        <TextBlock>Hello FROM IOTHUB</TextBlock>
+        <userControls:AzureIoTHubSelectorView DataContext="{Binding Path=AzureIoTHubSelectorViewModel}" />
+    </atc:UniformSpacingPanel>
 </UserControl>
