--- a/src/Atc.Azure.IoT.Wpf.App/UserControls/DeviceProvisioning/AzureDeviceProvisioningServiceView.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/UserControls/DeviceProvisioning/AzureDeviceProvisioningServiceView.xaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="Atc.Azure.IoT.Wpf.App.UserControls.AzureDeviceProvisioningServiceView"
+    x:Class="Atc.Azure.IoT.Wpf.App.UserControls.DeviceProvisioning.AzureDeviceProvisioningServiceView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
