--- a/src/Atc.Azure.IoT.Wpf.App/UserControls/IoTHub/AzureIoTHubServiceView.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/UserControls/IoTHub/AzureIoTHubServiceView.xaml
@@ -1,17 +1,17 @@
 <UserControl
-    x:Class="Atc.Azure.IoT.Wpf.App.UserControls.AzureIoTHubServiceView"
+    x:Class="Atc.Azure.IoT.Wpf.App.UserControls.IoTHub.AzureIoTHubServiceView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:atc="https://github.com/atc-net/atc-wpf/tree/main/schemas"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:userControls="clr-namespace:Atc.Azure.IoT.Wpf.App.UserControls"
-    d:DataContext="{d:DesignInstance Type=userControls:AzureIoTHubServiceViewModel}"
+    xmlns:ucIotHub="clr-namespace:Atc.Azure.IoT.Wpf.App.UserControls.IoTHub"
+    d:DataContext="{d:DesignInstance Type=ucIotHub:AzureIoTHubServiceViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <atc:UniformSpacingPanel Orientation="Vertical" Spacing="10">
         <TextBlock>Hello FROM IOTHUB</TextBlock>
-        <userControls:AzureIoTHubSelectorView DataContext="{Binding Path=AzureIoTHubSelectorViewModel}" />
+        <ucIotHub:AzureIoTHubSelectorView DataContext="{Binding Path=AzureIoTHubSelectorViewModel}" />
     </atc:UniformSpacingPanel>
 </UserControl>
