--- a/src/Atc.Azure.IoT.Wpf.App/UserControls/IoTHub/AzureIoTHubSelectorView.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/UserControls/IoTHub/AzureIoTHubSelectorView.xaml
@@ -2,40 +2,37 @@
     x:Class="Atc.Azure.IoT.Wpf.App.UserControls.IoTHub.AzureIoTHubSelectorView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:atc="https://github.com/atc-net/atc-wpf/tree/main/schemas"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ucIotHub="clr-namespace:Atc.Azure.IoT.Wpf.App.UserControls.IoTHub"
     d:DataContext="{d:DesignInstance Type=ucIotHub:AzureIoTHubSelectorViewModel}"
-    d:DesignHeight="450"
+    d:DesignHeight="250"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <atc:GridEx Columns="*" Rows="*,*">
-        <ListView
-            Grid.Row="0"
-            Height="200"
-            AlternationCount="0"
-            FontFamily="Modern"
-            ItemsSource="{Binding Path=IotHubs}"
-            SelectedItem="{Binding Path=SelectedItem}"
-            SelectionMode="Single">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn
-                        Width="300"
-                        DisplayMemberBinding="{Binding Path=SubscriptionName}"
-                        Header="Subscription Name" />
-                    <GridViewColumn
-                        Width="300"
-                        DisplayMemberBinding="{Binding Path=ResourceGroupName}"
-                        Header="Resource Group Name" />
-                    <GridViewColumn
-                        Width="200"
-                        DisplayMemberBinding="{Binding Path=IoTHubName}"
-                        Header="IoTHub Name" />
-                </GridView>
-            </ListView.View>
-        </ListView>
-        <TextBlock Grid.Row="1">IOTHUB DATA HERE</TextBlock>
-    </atc:GridEx>
+    <ListView
+        Height="200"
+        HorizontalAlignment="Stretch"
+        VerticalAlignment="Stretch"
+        AlternationCount="0"
+        FontFamily="Modern"
+        ItemsSource="{Binding Path=IotHubs}"
+        SelectedItem="{Binding Path=SelectedItem}"
+        SelectionMode="Single">
+        <ListView.View>
+            <GridView>
+                <GridViewColumn
+                    Width="300"
+                    DisplayMemberBinding="{Binding Path=SubscriptionName}"
+                    Header="Subscription Name" />
+                <GridViewColumn
+                    Width="300"
+                    DisplayMemberBinding="{Binding Path=ResourceGroupName}"
+                    Header="Resource Group Name" />
+                <GridViewColumn
+                    Width="200"
+                    DisplayMemberBinding="{Binding Path=IoTHubName}"
+                    Header="IoTHub Name" />
+            </GridView>
+        </ListView.View>
+    </ListView>
 </UserControl>
