--- a/src/Atc.Azure.IoT.Wpf.App/UserControls/IoTHub/AzureIoTHubServiceView.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/UserControls/IoTHub/AzureIoTHubServiceView.xaml
@@ -11,7 +11,8 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
     <atc:UniformSpacingPanel Orientation="Vertical" Spacing="10">
-        <TextBlock>Hello FROM IOTHUB</TextBlock>
         <ucIotHub:AzureIoTHubSelectorView DataContext="{Binding Path=AzureIoTHubSelectorViewModel}" />
+        <ucIotHub:AzureIoTHubDeviceSelectorView DataContext="{Binding Path=AzureIoTHubDeviceSelectorViewModel}" />
+        <ucIotHub:AzureIoTHubDeviceView />
     </atc:UniformSpacingPanel>
 </UserControl>
